Added gradle wrappers to VCS.

--- a/.gitignore
+++ b/.gitignore
@@ -171,5 +171,5 @@ gradle/wrapper
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 .idea/
-gradlew
-gradlew.bat
+#gradlew
+#gradlew.bat
